--- a/index.html
+++ b/index.html
@@ -5,12 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Project</title>
 </head>
 
 <body>
-    start
+    <div class="whitespace"></div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 img one">
+                <img src="./assets/images/01.jpg" alt="" class="ione">
+            </div>
+
+            <div class="col-lg-3 txt text-1">
+                <h1>whitespace is like air.</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8 txt text-2">
+                <h1>it is necessary for <br> a design to breathe.</h1>
+            </div>
+            <div class="col-lg-4 img two">
+                <img src="./assets/images/02.jpg" alt="" class="itwo">
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 img three">
+                    <img src="./assets/images/explore.png" alt="" class="ithree">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4 img four">
+                <img src="./assets/images/03.jpg" alt="" class="ifour">
+            </div>
+            <div class="col-lg-3 txt text-3">
+                <h1>whitespace is like air.</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8 text-4">
+                <h1>it is necessary for <br> a design to breathe. </h1>
+            </div>
+            <div class="col-lg-4 img five">
+                <img src="./assets/images/04.jpg" alt="" class="ifive">
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 img six">
+                    <img src="./assets/images/explore.png" alt="" class="isix">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-parallax-js/5.0.2/simpleParallax.min.js"></script>
 
     <script src="./assets/js/main.js"></script>
 </body>
